--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.8.0",
-    "sass": "^1.62.1"
+    "sass": "^1.62.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
