--- a/package.json
+++ b/package.json
@@ -8,16 +8,20 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "next": "^13.*",
+    "next-auth": "^4.22.1",
+    "react": "18.*",
+    "react-dom": "18.*",
     "react-icons": "^4.8.0",
     "sass": "^1.62.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/node": "20.1.5",
+    "@types/react": "18.2.6",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.0.4"
   }
 }
