--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
+    "mongodb": "^5.5.0",
     "next": "^13.*",
     "next-auth": "^4.22.1",
     "react": "18.*",
