--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "mongodb": "^5.5.0",
     "next": "^13.*",
