--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "mongodb": "^5.5.0",
+    "mongoose": "^7.1.1",
     "next": "^13.*",
     "next-auth": "^4.22.1",
     "react": "18.*",
