--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-, "pages/index.js", "components/ui/formInputs/RadioOption.js"  ],
+, "pages/index.js", "components/ui/formInputs/RadioOption.js", "pages/login.jsx"  ],
   "exclude": [
     "node_modules"
   ]
