--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "dotenv": "^16.0.3",
     "mongodb": "^5.5.0",
     "mongoose": "^7.1.1",
-    "next": "^13.*",
+    "next": "^13.4.3",
     "next-auth": "^4.22.1",
-    "react": "18.*",
-    "react-dom": "18.*",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "sass": "^1.62.1",
     "uuid": "^9.0.0"
