--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^7.1.1",
     "next": "^13.4.3",
     "next-auth": "^4.22.1",
+    "next-reveal": "^1.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
